<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyWorkouts"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/MyWorkouts"
        android:layout_width="257dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/my_workouts"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/WorkoutSessions"
        android:layout_width="147dp"
        android:layout_height="103dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="158dp"
        android:background="@drawable/workoutsession" />

    <Button
        android:id="@+id/PastWorkouts"
        android:layout_width="149dp"
        android:layout_height="102dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/WorkoutSessions"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/pastworkout" />

    <Button
        android:id="@+id/AddWorkouts"
        android:layout_width="147dp"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:background="@drawable/addworkout" />

    <TextView
        android:id="@+id/WorkoutSess"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_alignLeft="@+id/MyWorkouts"
        android:layout_alignStart="@+id/MyWorkouts"
        android:layout_below="@+id/WorkoutSessions"
        android:layout_marginLeft="-22dp"
        android:layout_marginStart="-22dp"
        android:text="@string/workout_sessions"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/PastWork"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:layout_below="@+id/WorkoutSessions"
        android:layout_marginLeft="-15dp"
        android:layout_marginStart="-15dp"
        android:layout_toEndOf="@+id/AddWork"
        android:layout_toRightOf="@+id/AddWork"
        android:text="@string/past_workout"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:id="@+id/AddWork"
        android:layout_width="146dp"
        android:layout_height="29dp"
        android:layout_below="@+id/AddWorkouts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-92dp"
        android:text="@string/my_workoutz"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

</RelativeLayout>